# trainee_launch

./: CMakeLists.txt  README.md  package.xml
config/map/: keepout_map.yaml  map.yaml  map_tsukuba_2023.yaml
config/param/: MID360_config.json  livox_mid-360.param.yaml  logicool_f310.yaml  nav2.param.yaml  navigation2.param.yaml  pcl2scan.param.yaml  pointcloud_to_laserscan.param.yaml  slam_toolbox.param.yaml  trainee_controllers.yaml  waypoint.yaml
config/rviz/: navigation2.rviz  slam_toolbox.rviz
launch/: livox_mid-360.launch.xml  map_save.launch.xml  nav2.launch.xml  navigation.launch.xml  navigation2.launch.xml  pointcloud_to_laserscan.launch.xml  pointclud_to_laserscan.launch.py  pointclud_to_laserscan_localization.launch.py  pointclud_to_laserscan_object_detection.launch.py  sensing.launch.xml  slam.launch.xml  slam_toolbox.launch.xml  teleop_twist_joy_comfy.launch.xml  trainee.launch.py
scripts/: map_save.sh  waypoint_nav.py
