<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trainee_launch</name>
  <version>0.0.0</version>
  <description>The trainee_launch package</description>
  <maintainer email="beike315@icloud.com">Tatsuhiro Ikebe</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>joy_linux</depend>
  <depend>navigation2</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>slam_toolbox</depend>

  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>trainee_description</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>odrive_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
